mythtv: FFmpeg customization
FFmpeg has been extensively customized by MythTV developers over
a period of many years. We are now creating a fork of the FFmpeg
repository to better track these changes. Customizations up to
May 2018 from many developers are included in this commit.

(cherry picked from commit cc09ed1e1b3d97bf3c36778e98e02f3b2aefd788)

--- a/fftools/Makefile
+++ b/fftools/Makefile
@@ -4,6 +4,9 @@ AVPROGS-$(CONFIG_FFPROBE)  += ffprobe
 
 AVPROGS     := $(AVPROGS-yes:%=%$(PROGSSUF)$(EXESUF))
 PROGS       += $(AVPROGS)
+MYTHPROGS   = $(addprefix myth, ${PROGS})
+MYTHFFLIBS  = -lmythavfilter -lmythavformat -lmythavcodec -lmythavresample \
+-lmythpostproc -lmythswresample -lmythswscale
 
 AVBASENAMES  = ffmpeg ffplay ffprobe
 ALLAVPROGS   = $(AVBASENAMES:%=%$(PROGSSUF)$(EXESUF))
@@ -34,8 +37,22 @@ all: $(AVPROGS)
 fftools/ffprobe.o fftools/cmdutils.o: libavutil/ffversion.h | fftools
 OBJDIRS += fftools
 
+# ${MYTHPROGS}:
+mythffmpeg:
+	cp ffmpeg_g mythffmpeg
+
+mythffprobe:
+	cp ffprobe_g mythffprobe
+
+mythffserver:
+	cp ffserver_g mythffserver
+
+mythffplay:
+	cp ffplay_g mythffplay
+
 ifdef AVPROGS
-install: install-progs install-data
+install: install-mythprogs
+
 endif
 
 install-progs-yes:
@@ -44,6 +61,10 @@ install-progs-$(CONFIG_SHARED): install-libs
 install-progs: install-progs-yes $(AVPROGS)
 	$(Q)mkdir -p "$(BINDIR)"
 	$(INSTALL) -c -m 755 $(AVPROGS) "$(BINDIR)"
+
+install-mythprogs: install-progs-yes $(MYTHPROGS)
+	$(Q)mkdir -p "$(BINDIR)"
+	$(INSTALL) -c -m 755 $(MYTHPROGS) "$(BINDIR)"
 
 uninstall: uninstall-progs
 
